# docker

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/backend/: settings.py  urls.py
src/post/: models.py  serializers.py
src/post/migrations/: 0001_initial.py
