[project]
name = "Backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pouya", email = "poesmaili@gmail.com"},
]
dependencies = [
    "Django~=5.0.1",
    "django-rest-framework~=0.1.0",
    "psycopg-binary~=3.1.17",
    "gunicorn~=21.2.0",
    "psycopg2-binary~=2.9.9",
    "whitenoise>=6.6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
